// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`magi reducer default 1`] = `
Object {
  "acceptedPrices": Array [],
  "operator": Object {
    "address": "",
    "balance": 0,
  },
  "priceFeeds": Object {},
  "roleManager": Object {
    "address": "",
    "balance": 0,
  },
  "states": Object {
    "firstPrice": Object {
      "price": 0,
      "source": "",
      "timestamp": 0,
    },
    "isStarted": false,
    "lastOperationTime": 0,
    "numOfPrices": 0,
    "operationCoolDown": 0,
    "priceFeedTimeTolerance": 0,
    "priceFeedTolerance": 0,
    "priceTolerance": 0,
    "priceUpdateCoolDown": 0,
    "secondPrice": Object {
      "price": 0,
      "source": "",
      "timestamp": 0,
    },
  },
  "subscription": 0,
}
`;

exports[`magi reducer magiAcceptedPrices 1`] = `
Object {
  "acceptedPrices": Array [
    "test",
  ],
  "operator": Object {
    "address": "",
    "balance": 0,
  },
  "priceFeeds": Object {},
  "roleManager": Object {
    "address": "",
    "balance": 0,
  },
  "states": Object {
    "firstPrice": Object {
      "price": 0,
      "source": "",
      "timestamp": 0,
    },
    "isStarted": false,
    "lastOperationTime": 0,
    "numOfPrices": 0,
    "operationCoolDown": 0,
    "priceFeedTimeTolerance": 0,
    "priceFeedTolerance": 0,
    "priceTolerance": 0,
    "priceUpdateCoolDown": 0,
    "secondPrice": Object {
      "price": 0,
      "source": "",
      "timestamp": 0,
    },
  },
  "subscription": 0,
}
`;

exports[`magi reducer magiOperator 1`] = `
Object {
  "acceptedPrices": Array [
    "test",
  ],
  "operator": Object {
    "address": "newMagiOperator",
    "balance": 101,
  },
  "priceFeeds": Object {
    "pf": Object {
      "balance": 100,
      "index": 0,
    },
  },
  "roleManager": Object {
    "address": "",
    "balance": 0,
  },
  "states": Object {
    "firstPrice": Object {
      "price": 100,
      "source": "pf1",
      "timestamp": 1234567890000,
    },
    "isStarted": true,
    "lastOperationTime": 1000,
    "numOfPrices": 1000,
    "operationCoolDown": 1000,
    "priceFeedTimeTolerance": 1000,
    "priceFeedTolerance": 1000,
    "priceTolerance": 1000,
    "priceUpdateCoolDown": 1000,
    "secondPrice": Object {
      "price": 102,
      "source": "pf2",
      "timestamp": 1234567890000,
    },
  },
  "subscription": 0,
}
`;

exports[`magi reducer magiRoleManager 1`] = `
Object {
  "acceptedPrices": Array [
    "test",
  ],
  "operator": Object {
    "address": "newMagiOperator",
    "balance": 101,
  },
  "priceFeeds": Object {
    "pf": Object {
      "balance": 100,
      "index": 0,
    },
  },
  "roleManager": Object {
    "address": "newMagiRoleManager",
    "balance": 102,
  },
  "states": Object {
    "firstPrice": Object {
      "price": 100,
      "source": "pf1",
      "timestamp": 1234567890000,
    },
    "isStarted": true,
    "lastOperationTime": 1000,
    "numOfPrices": 1000,
    "operationCoolDown": 1000,
    "priceFeedTimeTolerance": 1000,
    "priceFeedTolerance": 1000,
    "priceTolerance": 1000,
    "priceUpdateCoolDown": 1000,
    "secondPrice": Object {
      "price": 102,
      "source": "pf2",
      "timestamp": 1234567890000,
    },
  },
  "subscription": 0,
}
`;

exports[`magi reducer magiStates 1`] = `
Object {
  "acceptedPrices": Array [
    "test",
  ],
  "operator": Object {
    "address": "",
    "balance": 0,
  },
  "priceFeeds": Object {},
  "roleManager": Object {
    "address": "",
    "balance": 0,
  },
  "states": Object {
    "firstPrice": Object {
      "price": 100,
      "source": "pf1",
      "timestamp": 1234567890000,
    },
    "isStarted": true,
    "lastOperationTime": 1000,
    "numOfPrices": 1000,
    "operationCoolDown": 1000,
    "priceFeedTimeTolerance": 1000,
    "priceFeedTolerance": 1000,
    "priceTolerance": 1000,
    "priceUpdateCoolDown": 1000,
    "secondPrice": Object {
      "price": 102,
      "source": "pf2",
      "timestamp": 1234567890000,
    },
  },
  "subscription": 0,
}
`;

exports[`magi reducer magiSubscription off 1`] = `
Object {
  "acceptedPrices": Array [],
  "operator": Object {
    "address": "",
    "balance": 0,
  },
  "priceFeeds": Object {},
  "roleManager": Object {
    "address": "",
    "balance": 0,
  },
  "states": Object {
    "firstPrice": Object {
      "price": 0,
      "source": "",
      "timestamp": 0,
    },
    "isStarted": false,
    "lastOperationTime": 0,
    "numOfPrices": 0,
    "operationCoolDown": 0,
    "priceFeedTimeTolerance": 0,
    "priceFeedTolerance": 0,
    "priceTolerance": 0,
    "priceUpdateCoolDown": 0,
    "secondPrice": Object {
      "price": 0,
      "source": "",
      "timestamp": 0,
    },
  },
  "subscription": 0,
}
`;

exports[`magi reducer magiSubscription off 2`] = `
Array [
  Array [
    123,
  ],
]
`;

exports[`magi reducer magiSubscription on 1`] = `
Object {
  "acceptedPrices": Array [
    "test",
  ],
  "operator": Object {
    "address": "newMagiOperator",
    "balance": 101,
  },
  "priceFeeds": Object {
    "pf": Object {
      "balance": 100,
      "index": 0,
    },
  },
  "roleManager": Object {
    "address": "newMagiRoleManager",
    "balance": 102,
  },
  "states": Object {
    "firstPrice": Object {
      "price": 100,
      "source": "pf1",
      "timestamp": 1234567890000,
    },
    "isStarted": true,
    "lastOperationTime": 1000,
    "numOfPrices": 1000,
    "operationCoolDown": 1000,
    "priceFeedTimeTolerance": 1000,
    "priceFeedTolerance": 1000,
    "priceTolerance": 1000,
    "priceUpdateCoolDown": 1000,
    "secondPrice": Object {
      "price": 102,
      "source": "pf2",
      "timestamp": 1234567890000,
    },
  },
  "subscription": 123,
}
`;

exports[`magi reducer magipriceFeeds 1`] = `
Object {
  "acceptedPrices": Array [
    "test",
  ],
  "operator": Object {
    "address": "",
    "balance": 0,
  },
  "priceFeeds": Object {
    "pf": Object {
      "balance": 100,
      "index": 0,
    },
  },
  "roleManager": Object {
    "address": "",
    "balance": 0,
  },
  "states": Object {
    "firstPrice": Object {
      "price": 100,
      "source": "pf1",
      "timestamp": 1234567890000,
    },
    "isStarted": true,
    "lastOperationTime": 1000,
    "numOfPrices": 1000,
    "operationCoolDown": 1000,
    "priceFeedTimeTolerance": 1000,
    "priceFeedTolerance": 1000,
    "priceTolerance": 1000,
    "priceUpdateCoolDown": 1000,
    "secondPrice": Object {
      "price": 102,
      "source": "pf2",
      "timestamp": 1234567890000,
    },
  },
  "subscription": 0,
}
`;
